--- a/ReShade.ini
+++ b/ReShade.ini
@@ -5,7 +5,7 @@ UseAspectRatioHeuristics=1
 
 [GENERAL]
 ClockFormat=0
-CurrentPresetPath=C:\Program Files (x86)\Steam\steamapps\common\WOH\DefaultPreset.ini
+CurrentPresetPath=.\DefaultPreset.ini
 EffectSearchPaths=.\reshade-shaders\Shaders
 FPSPosition=1
 NewVariableUI=0
@@ -125,4 +125,3 @@ TitleBgCollapsed=0.992157,0.964706,0.890196,1.000000
 WarningMarker=1.000000,1.000000,0.000000,0.501961
 WindowBg=0.992157,0.964706,0.890196,1.000000
 WindowRounding=0.000000
-
